--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
+    "react-masonry-css": "^1.0.16",
+    "react-parallax": "^3.5.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
